--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   test:
@@ -28,7 +28,6 @@ jobs:
         run: |
           uv venv
           uv sync
-          # Ensure DVC S3 support is installed via uv
           uv pip install "dvc[s3]"
 
       - name: Configure DVC (DagsHub)
@@ -46,12 +45,9 @@ jobs:
           mkdir -p data/raw data/processed data/embeddings
 
       - name: Pull DVC data
-        # Adding --force is safer for CI environments
-        # Adding '|| echo' allows the CI to continue even if a specific file isn't on DagsHub yet
-        run: uv run dvc pull --force || echo "Some data files not found on remote, continuing..."
-
-      - name: Run Ingestion Script
-        run: uv run python -m src.ingestion.ingest
+        run: |
+          uv run dvc pull --force || echo "Some DVC files not found, continuing..."
 
       - name: Run tests
-        run: uv run pytest
+        run: |
+          uv run pytest
