--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "dvc[s3]>=3.66.1",
     "langchain>=1.2.7",
     "langchain-community>=0.4.1",
+    "langchain-text-splitters>=1.1.0",
     "mlflow>=3.9.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
@@ -17,4 +18,10 @@ dependencies = [
     "pytest>=9.0.2",
     "python-dotenv>=1.2.1",
     "pyyaml>=6.0.3",
+    "rank-bm25>=0.2.2",
+    "sentence-transformers>=5.2.2",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["."]
