--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,10 @@ dependencies = [
     "dvc[s3]>=3.66.1",
     "langchain>=1.2.7",
     "langchain-community>=0.4.1",
+    "langchain-ollama>=1.0.1",
     "langchain-text-splitters>=1.1.0",
     "mlflow>=3.9.0",
+    "ollama>=0.6.1",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "pymupdf>=1.26.7",
