--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "chromadb>=1.4.1",
     "dagshub>=0.6.5",
     "dvc[s3]>=3.66.1",
+    "fastapi>=0.128.0",
+    "gradio>=6.5.1",
     "langchain>=1.2.7",
     "langchain-community>=0.4.1",
     "langchain-ollama>=1.0.1",
@@ -22,6 +24,8 @@ dependencies = [
     "pyyaml>=6.0.3",
     "rank-bm25>=0.2.2",
     "sentence-transformers>=5.2.2",
+    "sse-starlette>=3.2.0",
+    "uvicorn>=0.40.0",
 ]
 
 [tool.pytest.ini_options]
