--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langchain-community>=0.4.1",
     "langchain-ollama>=1.0.1",
     "langchain-text-splitters>=1.1.0",
+    "langsmith>=0.6.6",
     "mlflow>=3.9.0",
     "ollama>=0.6.1",
     "pydantic>=2.12.5",
